--- a/curriculumVitaePRUEBA/index.htm
+++ b/curriculumVitaePRUEBA/index.htm
@@ -99,13 +99,15 @@
                 <option value="1">Varias veces al dia
                 <option value="2">Una vez al dia
                 <option value="3">Varias veces a la semana
-                <option value="4">varias veces al mes
+                <option value="4">varias veces al mes 
             </select>
             <br>
             <br>
             Comentarios sobre su satisfacción personal
             <br>
-            <textarea cols="30" rows="7" name="comentarios"></textarea>
+            <textarea cols="30" rows="7" name="comentarios">
+                
+            </textarea>
             <br>
             <br>
             <input type="checkbox" name="recibir_info" checked> Deseo recibir notificación de las novedades
@@ -118,10 +120,16 @@
             <input type="Reset" value="Borrar todo">
         </form>
 
+
+
+
+
+
     </main>
-    <footer>
-        Este es el footer
-    </footer>
+   
 </body>
+<footer>
+    Este es el footer
+</footer>
 <!-- le ha goun commit 2    -->
 </html>
